--- a/flask/templates/base.html
+++ b/flask/templates/base.html
@@ -83,7 +83,7 @@
 <footer>
 {% block footer %}
     <address>
-    Written by <a href="https://github.com/VishalKanakamamidi">Vishal Shivakumar Kanakamamidi</a>.<br>
+    Written by <a href="https://github.com/VishalKanakamamidi">9394767</a>.<br>
     <br>
     
     </address>
