--- a/flask/templates/secret1.html
+++ b/flask/templates/secret1.html
@@ -5,7 +5,7 @@
 
     <div class="row">
         <p>
-            <h1>This is secret!! You can see only because you are {{ get_username() }}</h1>
+            <h1>You are Admin {{ get_username() }}</h1>
             
 
 			
