--- a/flask/templates/secret.html
+++ b/flask/templates/secret.html
@@ -5,7 +5,7 @@
 
     <div class="row">
         <p>
-            <h1>This is secret!! You can see only because you are {{ get_username() }}</h1>
+            <h1> {{ get_username() }}'s Attendace</h1>
             <img src="{{ user_image }}" width="460" height="345">
 
 			
